--- a/next-pages/package.json
+++ b/next-pages/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "pages:dev": "wrangler pages dev .vercel/output/static --compatibility-flag=nodejs_compat",
+    "pages:dev": "wrangler pages dev .vercel/output/static --d1 --compatibility-flag=nodejs_compat",
     "pages:watch": "npx @cloudflare/next-on-pages --watch",
     "pages:build": "npx @cloudflare/next-on-pages",
     "pages:deploy": "wrangler pages deploy .vercel/output/static --project-name next-pages"
